fix: not all page content is visible when audio player is visible
user should see all content of the page regardless of audio player being visible or not

--- a/src/app/web-portal/contact/contact.component.scss
+++ b/src/app/web-portal/contact/contact.component.scss
@@ -3,7 +3,7 @@
 .contact-container {
   display: flex;
   flex-direction: row;
-  min-height: calc(100vh - #{$topAppBarHeight});
+  min-height: 100%;
 
   &__map {
     flex: 1 auto;
