--- a/src/app/web-portal/web-portal.component.scss
+++ b/src/app/web-portal/web-portal.component.scss
@@ -16,6 +16,10 @@
   }
 }
 
+.web-portal-app.audio-player-visible {
+  bottom: 90px;
+}
+
 app-main-nav {
   position: fixed;
   top: 0;
